# mandelbrot-cpp

./: .gitignore  App.cpp  App.hpp  CMakeLists.txt  Colour.hpp  Complex.cpp  Complex.hpp  Config.cpp  Config.hpp  Mandelbrot.cpp  Mandelbrot.hpp  MandelbrotRenderer.cpp  MandelbrotRenderer.hpp  PngSaver.cpp  PngSaver.hpp  RenderedMandelbrot.cpp  RenderedMandelbrot.hpp  SDLApp.cpp  SDLApp.hpp  SDLContext.cpp  SDLContext.hpp  SDLSurfaceRAII.hpp  TODO.md  interesting_spots.md  main.cpp
.github/workflows/: build.yml
src/: Colour.hpp  Complex.cpp  Complex.hpp  Config.hpp  Mandelbrot.cpp  MandelbrotRenderer.cpp  MandelbrotRenderer.hpp  PngSaver.hpp  RenderedMandelbrot.cpp  RenderedMandelbrot.hpp  SDLApp.cpp  SDLApp.hpp  SDLContext.cpp
test/: ComplexPerformanceTest.cpp  MandelbrotRendererTest.cpp  MandelbrotTest.cpp  doctest.cpp
